--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: socios
+  name: notificaciones
   labels:
-    app: socios
+    app: notificaciones
 spec:
   selector:
-    app: socios
+    app: notificaciones
   ports:
     - port: 80
       targetPort: 5005
@@ -15,7 +15,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: socios-ingress
+  name: notificaciones-ingress
 spec:
   ingressClassName: nginx
   rules:
